updates to New project

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title></title>
+    <script defer src="script.js"></script>
   </head>
   <body>
     <header class="header">
@@ -337,7 +338,5 @@
       </form>
     </div>
     <div class="overlay hidden"></div>
-
-    <script src="script.js"></script>
   </body>
 </html>
