Big Changes to Space Project

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title></title>
+    <script
+      src="https://kit.fontawesome.com/4b21962f8a.js"
+      crossorigin="anonymous"
+    ></script>
     <script defer src="script.js"></script>
   </head>
   <body>
@@ -29,7 +33,7 @@
           </li>
           <li class="nav__item">
             <a class="nav__link nav__link--btn btn--show-modal" href="#"
-              >Open account</a
+              >Sign Up</a
             >
           </li>
         </ul>
@@ -38,81 +42,81 @@
       <div class="header__title">
         <h1>
           Discover, Roam, Adventure,<br />
-          Explore
+          Explore.
         </h1>
-        <h4>
-          Adventure awaits. Explore nature's beauty. Find your wild escape.
-        </h4>
+        <h4>Discover The Wonder That Is Our Universe!</h4>
         <button class="btn--text btn--scroll-to">Learn more &DownArrow;</button>
       </div>
     </header>
 
     <section class="section" id="section--1">
       <div class="section__title">
-        <h2 class="section__description">Features</h2>
-        <h3 class="section__header">
-          Everything you need in a modern bank and more.
-        </h3>
+        <h2 class="section__description">Facts</h2>
+        <h3 class="section__header">3 Facts About Space You Didn't Know</h3>
       </div>
 
       <div class="features">
         <img
-          src="img/digital-lazy.jpg"
-          data-src="img/digital.jpg"
+          src="img/Sun-image.jpg"
+          data-src="img/Sun-image.jpg"
           alt="Computer"
           class="features__img lazy-img"
         />
         <div class="features__feature">
           <div class="features__icon">
-            <svg>
-              <use xlink:href="img/icons.svg#icon-monitor"></use>
-            </svg>
+            <i class="fa-solid fa-sun" style="font-size: 23px"></i>
           </div>
-          <h5 class="features__header">100% digital bank</h5>
+          <h5 class="features__header">
+            THE SUN'S MASS TAKES UP 99.86% OF THE SOLAR SYSTEM
+          </h5>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde alias
-            sint quos? Accusantium a fugiat porro reiciendis saepe quibusdam
-            debitis ducimus.
+            The Sun accounts for 99.86% of the mass in our solar system with a
+            mass of around 330,000 times that of Earth. Did you know that the
+            Sun is made up of mostly hydrogen (three quarters worth) with the
+            rest of its mass attributed to helium. If the Sun had a voice would
+            it be high and squeaky from all that helium?
           </p>
         </div>
 
         <div class="features__feature">
           <div class="features__icon">
-            <svg>
-              <use xlink:href="img/icons.svg#icon-trending-up"></use>
-            </svg>
+            <i class="fa-solid fa-user-astronaut" style="font-size: 23px"></i>
           </div>
-          <h5 class="features__header">Watch your money grow</h5>
+          <h5 class="features__header">
+            A FULL NASA SPACE SUIT COSTS $12,000,000.
+          </h5>
           <p>
-            Nesciunt quos autem dolorum voluptates cum dolores dicta fuga
-            inventore ab? Nulla incidunt eius numquam sequi iste pariatur
-            quibusdam!
+            While the entire suit costs $12m, 70% of that cost is for the
+            backpack and control module. However, the space suits that NASA uses
+            were built in 1974. If these were priced by today's pricing, they
+            would cost an estimated 150 million dollars!
           </p>
         </div>
         <img
-          src="img/grow-lazy.jpg"
-          data-src="img/grow.jpg"
+          src="img/Space-suit.jpg"
+          data-src="img/Space-suit.jpg"
           alt="Plant"
           class="features__img lazy-img"
         />
 
         <img
-          src="img/card-lazy.jpg"
-          data-src="img/card.jpg"
+          src="img/Venus.jpg"
+          data-src="img/Venus.jpg"
           alt="Credit card"
           class="features__img lazy-img"
         />
         <div class="features__feature">
           <div class="features__icon">
-            <svg>
-              <use xlink:href="img/icons.svg#icon-credit-card"></use>
-            </svg>
+            <i class="fa-solid fa-temperature-high" style="font-size: 28px"></i>
           </div>
-          <h5 class="features__header">Free debit card included</h5>
+          <h5 class="features__header">
+            THE HOTTEST PLANET IN OUR SOLAR SYSTEM IS VENUS.
+          </h5>
           <p>
-            Quasi, fugit in cumque cupiditate reprehenderit debitis animi enim
-            eveniet consequatur odit quam quos possimus assumenda dicta fuga
-            inventore ab.
+            Did you know that Venus isn't the closest planet to the sun? That is
+            Mercury. You would think that Mercury would then be the hottest, but
+            Mercury has no atmosphere (which regulates temperature), resulting
+            in big fluctuations. Venus has an average tempature of 867°F!
           </p>
         </div>
       </div>
@@ -120,9 +124,9 @@
 
     <section class="section" id="section--2">
       <div class="section__title">
-        <h2 class="section__description">Operations</h2>
-        <h3 class="section__header">
-          Everything as simple as possible, but no simpler.
+        <h2 class="section__description" style="color: #fff">Operations</h2>
+        <h3 class="section__header" style="color: #fff">
+          Here's how it works...
         </h3>
       </div>
 
@@ -132,66 +136,65 @@
             class="btn operations__tab operations__tab--1 operations__tab--active"
             data-tab="1"
           >
-            <span>01</span>Instant Transfers
+            <span>01</span>Search
           </button>
           <button class="btn operations__tab operations__tab--2" data-tab="2">
-            <span>02</span>Instant Loans
+            <span>02</span>Locate
           </button>
           <button class="btn operations__tab operations__tab--3" data-tab="3">
-            <span>03</span>Instant Closing
+            <span>03</span>Embark
           </button>
         </div>
         <div
           class="operations__content operations__content--1 operations__content--active"
         >
           <div class="operations__icon operations__icon--1">
-            <svg>
-              <use xlink:href="img/icons.svg#icon-upload"></use>
-            </svg>
+            <i class="fa-solid fa-magnifying-glass"></i>
           </div>
-          <h5 class="operations__header">
-            Tranfser money to anyone, instantly! No fees, no BS.
-          </h5>
+          <h5 class="operations__header">Find Your Outdoors!</h5>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            Locate the search bar below and enter relevant keywords related to
+            the trail you want to find. Review the search results and click on a
+            trail for more details.
           </p>
         </div>
 
         <div class="operations__content operations__content--2">
           <div class="operations__icon operations__icon--2">
-            <svg>
-              <use xlink:href="img/icons.svg#icon-home"></use>
-            </svg>
+            <i class="fa-solid fa-location-dot"></i>
           </div>
-          <h5 class="operations__header">
-            Buy a home or make your dreams come true, with instant loans.
-          </h5>
+          <h5 class="operations__header">Location, Location, Location!</h5>
           <p>
-            Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-            cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.
+            Once you've selected the ideal trail for you, utilize the built-in
+            map to find its location and the quickest route.
           </p>
         </div>
         <div class="operations__content operations__content--3">
           <div class="operations__icon operations__icon--3">
-            <svg>
-              <use xlink:href="img/icons.svg#icon-user-x"></use>
-            </svg>
+            <i class="fa-regular fa-compass"></i>
           </div>
-          <h5 class="operations__header">
-            No longer need your account? No problem! Close it instantly.
-          </h5>
+          <h5 class="operations__header">Your Journey Awaits!</h5>
           <p>
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-            officia deserunt mollit anim id est laborum. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat.
+            You're all set to embark on a thrilling adventure that promises to
+            be unforgettable! Gather everything you need, fuel your excitement,
+            and get ready to immerse yourself in a unique and enriching
+            experience.
           </p>
         </div>
+      </div>
+    </section>
+    <section class="section section--sign-up">
+      <div class="section__title">
+        <h3 class="section__header">NASA Astronomy Picture of the Day</h3>
+      </div>
+
+      <div class="search-container">
+        <label for="dateInput">Enter a date (YYYY-MM-DD):</label>
+        <input type="text" id="dateInput" placeholder="YYYY-MM-DD" />
+        <button id="searchButton">Search</button>
+      </div>
+      <div class="apod-container">
+        <!-- APOD content will be displayed here -->
       </div>
     </section>
 
@@ -272,16 +275,6 @@
         <button class="slider__btn slider__btn--right">&rarr;</button>
         <div class="dots"></div>
       </div>
-    </section>
-
-    <section class="section section--sign-up">
-      <div class="section__title">
-        <h3 class="section__header">
-          The best day to join Bankist was one year ago. The second best is
-          today!
-        </h3>
-      </div>
-      <button class="btn btn--show-modal">Open your free account today!</button>
     </section>
 
     <footer class="footer">
