--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title></title>
+    <title>Our Universe</title>
     <script
       src="https://kit.fontawesome.com/4b21962f8a.js"
       crossorigin="anonymous"
@@ -174,7 +174,7 @@
 
         <div class="operations__content operations__content--2">
           <div class="operations__icon operations__icon--2">
-            <i class="fa-solid fa-rocket" style="font-size: 26px"></i>
+            <i class="fa-solid fa-rocket"></i>
           </div>
           <h5 class="operations__header">The International Space Station!</h5>
 
@@ -364,10 +364,11 @@
         <label>Last Name</label>
         <input type="text" />
         <label>Email Address</label>
-        <input type="email" />
-        <button class="btn" style="color: #fff">Sign Up &rarr;</button>
+        <input type="email" id="email" />
+        <button class="btn-in-modal" style="color: #fff">Sign Up &rarr;</button>
       </form>
     </div>
+
     <div class="overlay hidden"></div>
   </body>
 </html>
