Server bug fixes

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
         <input type="text" name="lname" />
 
         <label>Email Address</label>
-        <input type="email" name="email" />
+        <input type="email" name="email" id="email" />
 
         <button class="btn-in-modal" style="color: #fff">Sign Up &rarr;</button>
       </form>
